[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]

[tool.setuptools_scm]
version_scheme = "post-release"

[project]
name = "tumai-space-api"
version = "0.1.0"
description = ""
authors = [{ name = "Robin Holzinger", email = "robin.holzingr@gmail.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"


[project.urls]
repository = "https://github.com/Quantco/quantcore.mssqlkit"

[tool.setuptools.packages.find]
include = ["api_space.*"]


[tool.ruff]
line-length = 88
select = ["F", "E", "W", "N", "UP"]
target-version = "py311"

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
python_version = '3.11'
exclude = ["__init__.py", "__pycache__/*", "docs/*"]


explicit_package_bases = true
namespace_packages = true

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --cov=space_api --cov-report term-missing"

[tool.coverage.run]
omit = ["*__init__.py", "tests/*", "__pycache__"]
